--- a/client/style/common.sass
+++ b/client/style/common.sass
@@ -1,2 +1,20 @@
 p
-    color: blue
+  color: blue
+
+#Account
+  width: 50%
+    
+.placeholder
+  animation: pulse 1s infinite
+  min-height: 1em
+  text-indent: -99999px
+
+@keyframes pulse
+  0%
+    background-color: rgb(235, 235, 235)
+
+  50%
+    background-color: rgb(245, 245, 245)
+
+  100%
+    background-color: rgb(235, 235, 235)
