--- a/public/style/common.css
+++ b/public/style/common.css
@@ -1,2 +1,18 @@
 p {
   color: blue; }
+
+#Account {
+  width: 50%; }
+
+.placeholder {
+  animation: pulse 1s infinite;
+  min-height: 1em;
+  text-indent: -99999px; }
+
+@keyframes pulse {
+  0% {
+    background-color: #ebebeb; }
+  50% {
+    background-color: whitesmoke; }
+  100% {
+    background-color: #ebebeb; } }
