Initially styling of Profile complete. Added dependency of ReactTooltip.

--- a/public/views/profile.pug
+++ b/public/views/profile.pug
@@ -2,8 +2,8 @@ doctype html
 html(lang='en')
     head
         title= user.name
+        link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous")
         link(href='../style/common.css' rel='stylesheet' type='text/css')
     body
         #profileApp
-        a(href='/logout') Logout
         script(src='../js/profile.bundle.js', type='text/javascript')
