--- a/client/style/common.sass
+++ b/client/style/common.sass
@@ -1,20 +1,89 @@
-p
-  color: blue
+body
+    margin: 30px
+    background-color: orange
+    
+#Profile
+    border-radius: 25px
+    background-color: white
+    padding-top: 30px
+    padding-bottom: 300px
+    
+#ProfileSideBar
+    img
+        opacity: 0.9
+    #logout
+        margin-top: 100px
+        font-size: 10px
+        opacity: 0.5
+        &:hover
+            opacity: 1.0
+        
+#ClickScore
+    text-align: center
+    margin-bottom: 50px
+    max-width: 300px
+    margin-left: auto
+    margin-right: auto
+    margin-top: 20px
+    padding-bottom: 30px
+    padding-top: 20px
+    border-radius: 20px
+    border: 1px solid #eed
+    background-color: #ffe
 
 #Account
-  width: 50%
+    background-color: #DDD
+    margin: 30px
+    div
+        font-size: 10px
+        font-family: Consolas
+        
+    
+#TopClickScorers
+    margin: 20px
+    padding: 2px
+    max-width: 300px
+    border: 1px solid black
+    .container
+        margin-left: 0px
+        margin-right: 0px
+        .title
+            margin-left: -17px
+            margin-right: -17px
+            margin-top: -2px
+            background: #EEE
+            p
+                text-align: center
+                margin: 0px
+                padding: 0px
+
+.ScorerLine
+    &:nth-child(odd)
+        background: #CCC
+    &:nth-child(even)
+        background: #FFF
+    .rank
+        text-align: center
+        font-size: 11px
+        font-weight: bold
+    .name
+        text-align: center
+        font-size: 10px
+    .score
+        text-align: center
+        font-size: 10px
     
 .placeholder
-  animation: pulse 1s infinite
-  min-height: 1em
-  text-indent: -99999px
+    animation: pulse 1s infinite
+    min-height: 1em
+    text-indent: -99999px
 
 @keyframes pulse
-  0%
-    background-color: rgb(235, 235, 235)
+    0%
+        background-color: rgb(235, 235, 235)
 
-  50%
-    background-color: rgb(245, 245, 245)
+    50%
+        background-color: rgb(245, 245, 245)
 
-  100%
-    background-color: rgb(235, 235, 235)
+    100%
+        background-color: rgb(235, 235, 235)
