--- a/public/style/common.css
+++ b/public/style/common.css
@@ -2,6 +2,20 @@ body {
   margin: 30px;
   background-color: orange; }
 
+#info {
+  background-color: white;
+  padding-top: 100px;
+  padding-bottom: 100px; }
+
+.box1 {
+  height: 450px;
+  width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  background-color: orange; }
+
 .fadeItOut {
   -webkit-transition: opacity 1s ease-in-out;
   -moz-transition: opacity 1s ease-in-out;
