--- a/public/views/home.pug
+++ b/public/views/home.pug
@@ -3,10 +3,46 @@ html(lang='en')
     head
         title ConquerJS
         link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous")
-        link(href='../style/common.css' rel='stylesheet' type='text/css')
+        link(href='../style/info.css' rel='stylesheet' type='text/css')
         script(src="https://use.fontawesome.com/21b68c7c36.js")
         link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.min.css')
     body
-        #App
-        i.fa.fa-spinner.fa-pulse.fa-3x.fa-fw#Loading
-        script(src='../js/home.bundle.js', type='text/javascript')
+        a.github-corner(href='https://github.com/JosephLivengood/ConquerJS', aria-label='View source on Github')
+            svg(width='300', height='300', viewbox='0 0 250 250', style='fill:orange; color:#FFEDCC; position: absolute; top: 0; border: 0; right: 0;', aria-hidden='true')
+                path(d='M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z')
+                path.octo-arm(d='M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2', fill='currentColor', style='transform-origin: 130px 106px;')
+                path.octo-body(d='M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z', fill='currentColor')
+        style.
+            .github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}
+
+        #info
+            #home-display.box1(data-tilt data-tilt-reset="true" data-tilt-scale="1.1" data-tilt-perspective="500")
+                .logosample ConquerJS
+                .loginboxsample
+                    a.btn.btn-block.btn-social.btn-sm.btn-github.loginbuttonsample
+                        span.fa.fa-github
+                        |  Github!
+                    a.btn.btn-block.btn-social.btn-sm.btn-google.loginbuttonsample
+                        span.fa.fa-google
+                        |  Google!
+                    a.btn.btn-block.btn-social.btn-sm.btn-twitter.loginbuttonsample
+                        span.fa.fa-twitter
+                        |  Twitter!
+                span.pitch Node/React Boilerplate with Passport
+            
+            p *format text below*
+            
+            h1 Developing with <i>ConquerJS</i> will be the best decision you ever make. 
+            h2 <i>ConquerJS</i> offers an extremely modular and scalable framework with which you can build whatever app you can think of!
+            ul
+                li The base project utilizing Node and Express along with a MongoDB on the back end, and React on the front.
+                li Also implimented in the project is Passport authentication, the easiest way to authenticate users without having to deal with the security risks of storing passwords or creating registration/reset password forms!
+                li In addition we also have brought in many other lightweight modules like Axios (for api calls in React), React Tooltips, Font Awesome, and Bootstrap v4 alpha.
+                li You'll be happy to know too the test runner and sample tests are already up and running with Mocha, Chai, and Chai-http.
+            h2 <i>ConquerJS</i> is easy to understand and ready to handle as large or small as a project as you think of. Its file structure is extremely organized and promotes small easy to manage files great for open source projects with many concurent devs.
+            
+            p *Insert 3d file structure*
+            
+            
+
+        script(src='../resources/vanilla-tilt.min.js', type='text/javascript')
